# neo4j_graph_rag

./: KG_P1_01_neo4j_Introduction.ipynb  KG_P1_02_neo4j_cypher_advanced.ipynb  KG_P1_03_neo4j_movie_02_basic_search.ipynb  KG_P1_03_neo4j_movie_03_full-text_search.ipynb  KG_P1_03_neo4j_movie_04_vector_search.ipynb  KG_P1_03_neo4j_movie_05_text2cypher.ipynb  KG_P1_03_neo4j_movie_06_graphRAG.ipynb  KG_P2_01_news_analysis.ipynb  KG_P2_02_etf_recommendation.ipynb  KG_P2_03_10K_report.ipynb  KG_P2_04_law_qa.ipynb  README.md  pyproject.toml  test.py  test01.py
news_data/: news_metadata.jsonl
tesla/: tesla_10k_sections_split.pkl
