[project]
name = "neo4j-graphrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "langchain>=0.3.27",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=2.1.12",
    "langchain-neo4j>=0.3.0",
    "langchain-openai>=0.3.35",
    "neo4j>=5.28.3",
    "numpy==1.26.4",
    "python-dotenv>=1.2.1",
]
